--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,6 @@ img{
 .row{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
